--- a/src/views/frontend/LoginArtesa/src/App.scss
+++ b/src/views/frontend/LoginArtesa/src/App.scss
@@ -392,7 +392,13 @@ img, video {
     }
   }
 }
-
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-in-out;
+}
 // Sidebar
 .sidebar {
   width: 250px;
