--- a/src/views/frontend/LoginArtesa/src/App.css
+++ b/src/views/frontend/LoginArtesa/src/App.css
@@ -302,6 +302,18 @@ img, video {
   opacity: 1;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
 .sidebar {
   width: 250px;
   min-width: 250px;
