--- a/src/views/frontend/LoginArtesa/index.css
+++ b/src/views/frontend/LoginArtesa/index.css
@@ -1,5 +1,5 @@
-@import "tailwindcss"
-@import './styles/variables.css';
-@import "tailwindcss/preflight";
+@import "tailwindcss/base";
 @import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import './styles/variables.css';
 @import './styles/variables.scss';
