--- a/src/views/frontend/LoginArtesa/index.html
+++ b/src/views/frontend/LoginArtesa/index.html
@@ -16,6 +16,9 @@
     <!-- Precarga de imágenes críticas -->
     <link rel="preload" href="/src/LoginsAssets/principal_img.jpg" as="image">
     <link rel="preload" href="/src/LoginsAssets/logo_artesa_alt.png" as="image">
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
