--- a/src/views/frontend/LoginArtesa/index.html
+++ b/src/views/frontend/LoginArtesa/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="es">
+  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/LoginsAssets/logo_artesa.png" />
